// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render a confirmation alert with an icon 1`] = `
<div
  className="css-heeknc root type-confirmation"
  style={Object {}}
>
  <i
    className="css-8urzj60 css-17ykkxk"
    color="green"
    family="material"
    interactive={false}
    onClick={undefined}
    size={16}
    style={Object {}}
    weight="normal"
  >
    check_circle
  </i>
  <span
    align="initial"
    className="css-1mpt92p1 css-e58m6b"
    color="green"
    hoverColor="none"
    href={undefined}
    interactive={undefined}
    multiline={true}
    name={undefined}
    notInteractive={undefined}
    onClick={undefined}
    size="small"
    style={Object {}}
    target={undefined}
    weight="light"
  >
    A confirmation alert
  </span>
</div>
`;

exports[`Alert should render a warning alert 1`] = `
<div
  className="css-heeknc root type-warning"
  style={Object {}}
>
  <span
    align="initial"
    className="css-1mpt92p1 css-sp22wf"
    color="orange"
    hoverColor="none"
    href={undefined}
    interactive={undefined}
    multiline={true}
    name={undefined}
    notInteractive={undefined}
    onClick={undefined}
    size="small"
    style={Object {}}
    target={undefined}
    weight="light"
  >
    A warning alert
  </span>
</div>
`;

exports[`Alert should render shallow component ok 1`] = `
<div
  className="css-heeknc root type-info"
  style={Object {}}
>
  <span
    align="initial"
    className="css-1mpt92p1 css-11unkrt"
    color="blue"
    hoverColor="none"
    href={undefined}
    interactive={undefined}
    multiline={true}
    name={undefined}
    notInteractive={undefined}
    onClick={undefined}
    size="small"
    style={Object {}}
    target={undefined}
    weight="light"
  >
    A info alert
  </span>
</div>
`;
